<?xml version="1.0"?>
<package>
  <name>rosjava_actionlib</name>
  <version>0.4.5</version>
  <description>Actionlib for Rosjava. A pure java implementation of actionlib.</description>

  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Ruegemer</maintainer>

  <author email="ecorbellini@ekumenlabs.com">Ernesto Corbellini</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib_tutorials</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib_tutorials</run_depend>

</package>
